# zxtape

./: .clang-format  .env.example  .gitignore  .gitmodules  .mise.toml  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
cmake/: toolchain-arm-none-eabi.cmake
include/: tzx_compat_impl.h  zxtape.h
lib/: zxtape.c
lib/compat/: zxtape_compat.h  zxtape_compat_internal.h
lib/compat/circle/: tzx_compat_circle.c  tzx_compat_circle.h  tzx_compat_internal_circle.h
lib/compat/macos/: tzx_compat_internal_macos.h  tzx_compat_macos.c  tzx_compat_macos.h
lib/file/: zxtape_file_api_buffer.c  zxtape_file_api_buffer.h  zxtape_file_api_dummy.c  zxtape_file_api_dummy.h  zxtape_file_api_file.c  zxtape_file_api_file.h
lib/macos/: tzx_compat_internal_macos.h  tzx_compat_macos.c  tzx_compat_macos.h
lib/tzx/: tzx.c  tzx.h
lib/zxtape/: zxtape.c
lib/zxtape/file/: zxtape_file_api_buffer.c  zxtape_file_api_buffer.h  zxtape_file_api_dummy.h  zxtape_file_api_file.c  zxtape_file_api_file.h
lib/zxtape/info/: zxtape_info.c  zxtape_info.h
lib/zxtape/tzx/: .clang-format  tzx.c  tzx.h
lib/zxtape/tzx_compat/: tzx_compat.c  tzx_compat.h  tzx_compat_internal.h
lib/zxtape/tzx_compat/circle/: tzx_compat_circle.c  tzx_compat_circle_os_headers.h
lib/zxtape/tzx_compat/macos/: tzx_compat_macos_os_headers.h
lib/zxtape/tzx_compat_impl/macos/: audio_macos.c  audio_macos.h  posix_timer_macos.c  posix_timer_macos.h  thread_timer_macos.c  thread_timer_macos.h  timer_macos.c  timer_macos.h  tzx_compat_impl_macos-posix_timer.c  tzx_compat_impl_macos-thread-working.c  tzx_compat_impl_macos-thread.c  tzx_compat_impl_macos-timer-working.c  tzx_compat_impl_macos.c
lib/zxtape/tzx_compat_impl/macos/unused/: posix_timer_macos.c  tzx_compat_impl_macos-posix_timer.c  tzx_compat_impl_macos-thread-working.c  tzx_compat_impl_macos-thread.c  tzx_compat_impl_macos-timer-working.c
lib/zxtape/utils/: zxtape_utils.c  zxtape_utils.h
test/: zxtape.test.c
